exports[`test renders with accessory 1`] = `
<View>
  <View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
            "minHeight": 44,
            "paddingLeft": 15,
            "paddingRight": 20,
            "paddingVertical": 10,
          },
          Object {
            "backgroundColor": "#fff",
          },
          undefined,
        ]
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Array [
            Object {
              "alignSelf": "center",
              "fontSize": 12,
              "marginRight": 5,
              "textAlign": "right",
              "width": 75,
            },
            Object {
              "color": "#007AFF",
            },
          ]
        }>
        Detail
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Array [
            Object {
              "flex": 1,
              "fontSize": 12,
              "paddingVertical": 3,
            },
            Object {
              "color": "#000",
            },
          ]
        }>
        LeftDetail
      </Text>
      <View
        style={
          Object {
            "backgroundColor": "transparent",
            "borderColor": "#c7c7cc",
            "borderRightWidth": 1,
            "borderTopWidth": 1,
            "height": 10,
            "marginLeft": 7,
            "transform": Array [
              Object {
                "rotate": "45deg",
              },
            ],
            "width": 10,
          }
        } />
    </View>
  </View>
</View>
`;

exports[`test renders with left detail 1`] = `
<View>
  <View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
            "minHeight": 44,
            "paddingLeft": 15,
            "paddingRight": 20,
            "paddingVertical": 10,
          },
          Object {
            "backgroundColor": "#fff",
          },
          undefined,
        ]
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Array [
            Object {
              "alignSelf": "center",
              "fontSize": 12,
              "marginRight": 5,
              "textAlign": "right",
              "width": 75,
            },
            Object {
              "color": "#007AFF",
            },
          ]
        }>
        Detail
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Array [
            Object {
              "flex": 1,
              "fontSize": 12,
              "paddingVertical": 3,
            },
            Object {
              "color": "#000",
            },
          ]
        }>
        LeftDetail
      </Text>
    </View>
  </View>
</View>
`;
